--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -4,22 +4,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cosmetics</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body style="background-color: bisque;">
-    <h1 style="text-align:center">Leonardo da Vinci</h1>
-    <hr>
-    <p><b>Леона́рдо да Ві́нчі</b> (італ. Leonardo da Vinci; 15 квітня 1452, селище Анк'яно в Тоскані поблизу Флоренції — 2 травня 1519, замок Кло-Люсе, Амбуаз) — італійський математик, художник (живописець, скульптор, архітектор), науковець (анатом, натураліст), винахідник, письменник, музикант, один з найбільших представників мистецтва Високого Відродження, яскравий приклад «універсальної людини».</p>
-
-    <ul>
-        <li>Дата і місце народження: Леонардо народився 15 квітня 1452 року в місті Вінчі (Італія).</li>
-        <li>Мистецька спадщина: Леонардо був видатним художником. Його найвідоміші твори — це «Мона Ліза», «Тайна вечеря», «Вітрувіанська людина».</li>
-        <li>Смерть: Леонардо помер 2 травня 1519 року в Амбуазі, Франція.</li>
-        <li>Внесок в науку: Його підхід до дослідження природних явищ став важливою частиною наукової революції, хоча його роботи не були опубліковані при його житті.</li>
-    </ul>
-    <hr>
-    <img  style="margin-left: 300px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZUue02eV8V4_AZ5KvmPcHBdXV1itaiNWjG-UiT1iidfH-jVWnhn3BpS9fgy7KuAiMnoQ&usqp=CAU" />
+<body style="background-color: rgb(241, 146, 229);">
+    <nav class="navbar navbar-expand-lg " style="background-color: rgb(240, 202, 232);">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"><img height="50" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/1200px-Flag_of_Ukraine.svg.png"  ></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Categories</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" aria-disabled="true">About us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div class="container">
+      <h1>Our Items</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Image</th>
+            <th scope="col">Name</th>
+            <th scope="col">Price</th>
+            <th scope="col">Created</th>
+            <th scope="col">Status</th>
+            <th scope="col">Category</th>
+            <th scope="col">Actions</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+            {% for i in products %}
+          <tr>
+            <th scope="row">{{i.id}}</th>
+            <td>
+                <img height="50" src="{{i.image}}" alt="{{i.title}}">
+            </td>
+            <td>{{i.name | upper}}</td>
+            <td>{{i.price}}$</td>
+            <td>{{i.createdAt | date:"Y-M-d"}}</td>
+            <td>{{i.inStock | yesno:"In Stock,Out of Stock"}}</td>
+            <td>{{i.category}}</td>
+            <td>
+                <a href="/delete/{{i.id}}" class="btn btn-outline-secondary">
+                    <i class="bi bi-trash-fill"></i>
+                </a>
+            </td>
+        </tr>
+        {% endfor %}
+        </tbody>
+      </table>
+      <p style="color: rgb(138, 42, 114);">Items: {{products | length}}</p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
