--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -1,79 +1,97 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cosmetics</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cosmetics</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
 
 <body style="background-color: rgb(241, 146, 229);">
-    <nav class="navbar navbar-expand-lg " style="background-color: rgb(240, 202, 232);">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img height="50" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/1200px-Flag_of_Ukraine.svg.png"  ></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Products</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Categories</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">About us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-      <div class="container">
-      <h1>Our Items</h1>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Image</th>
-            <th scope="col">Name</th>
-            <th scope="col">Price</th>
-            <th scope="col">Created</th>
-            <th scope="col">Status</th>
-            <th scope="col">Category</th>
-            <th scope="col">Actions</th>
-          </tr>
-        </thead>
-        <tbody class="table-group-divider">
-            {% for i in products %}
-          <tr>
-            <th scope="row">{{i.id}}</th>
-            <td>
-                <img height="50" src="{{i.image}}" alt="{{i.title}}">
-            </td>
-            <td>{{i.name | upper}}</td>
-            <td>{{i.price}}$</td>
-            <td>{{i.createdAt | date:"Y-M-d"}}</td>
-            <td>{{i.inStock | yesno:"In Stock,Out of Stock"}}</td>
-            <td>{{i.category}}</td>
-            <td>
-                <a href="/delete/{{i.id}}" class="btn btn-outline-secondary">
-                    <i class="bi bi-trash-fill"></i>
-                </a>
-            </td>
+  <nav class="navbar navbar-expand-lg mb-4" style="background-color: rgb(240, 202, 232);">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img height="50"
+          src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/49/Flag_of_Ukraine.svg/1200px-Flag_of_Ukraine.svg.png"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="create/">Create</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Categories</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" aria-disabled="true">About us</a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container">
+    {% block content %}
+    <h1>Our Items</h1>
+    <table class="table">
+      <thead>
+        <tr>
+          <th scope="col">#</th>
+          <th scope="col">Image</th>
+          <th scope="col">Title</th>
+          <th scope="col">Price</th>
+          <th scope="col">Created</th>
+          <th scope="col">Status</th>
+          <th scope="col">Category</th>
+          <th scope="col">Actions</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        {% for i in products %}
+        <tr>
+          <th scope="row">{{i.id}}</th>
+          <td>
+            <img height="50" src="{{i.image}}" alt="{{i.title}}">
+          </td>
+          
+          <td><a style="color: rgb(100, 21, 80)" href="/details/{{i.id}}">{{i.title | upper}}</a></td>
+          <td>{{i.price}}$</td>
+          <td>{{i.createdAt | date:"Y-M-d"}}</td>
+          <td>{{i.inStock | yesno:"In Stock,Out of Stock"}}</td>
+          <td>{{i.category}}</td>
+          <td>
+            <a href="/edit/{{i.id}}" class="btn btn-outline-dark">
+              <i class="bi bi-pencil-fill"></i>
+          </a>
+            <a href="/delete/{{i.id}}" class="btn btn-outline-secondary">
+              <i class="bi bi-trash-fill"></i>
+            </a>
+          </td>
         </tr>
         {% endfor %}
-        </tbody>
-      </table>
-      <p style="color: rgb(138, 42, 114);">Items: {{products | length}}</p>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      </tbody>
+    </table>
+    <p style="color: rgb(145, 62, 124);">Items: {{products | length}}</p>
+    {% endblock %}
+  </div>
+  <footer class="text-center p-3">
+    <p>&copy; 2022 - Django MVT Shop Application made for Shop</p>
+</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </body>
