--- a/products/templates/index.html
+++ b/products/templates/index.html
@@ -35,11 +35,16 @@
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">About us</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'cart' %}">Cart ({{ cart_item_count }})</a>
+          </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" role="search" method="get" action="{% url 'index' %}">
+          <input class="form-control me-2" type="search" name="search" placeholder="Search" aria-label="Search" value="{{ search_query }}">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        
+    
       </div>
     </div>
   </nav>
@@ -79,6 +84,9 @@
           </a>
             <a href="/delete/{{i.id}}" class="btn btn-outline-secondary">
               <i class="bi bi-trash-fill"></i>
+            </a>
+            <a href="{% url 'add_to_cart' i.id %}" class="btn btn-outline-primary">
+              <i class="bi bi-cart-plus"></i> Add to Cart
             </a>
           </td>
         </tr>
